# RX5808-Div

Firmware/ESP32/RX5808/: .gitignore  sdkconfig
Firmware/ESP32/RX5808/main/: CMakeLists.txt  idf_component.yml  main.c
Firmware/ESP32/RX5808/main/driver/: SPI.c
Firmware/ESP32/RX5808/main/gui/lvgl_app/: page_about.c  page_about.h  page_main.h  page_menu.c  page_menu.h  page_scan.h  page_scan_calib.h  page_scan_chart.h  page_scan_table.h  page_setup.c  page_setup.h  page_start.h
Firmware/ESP32/RX5808/main/gui/lvgl_app/resources/: lock_img.c  lv_font_chinese_12.c  lv_font_chinese_16.c  lv_font_fre.c  lv_font_start.c  menu_about_icon.c  menu_rx_icon.c  menu_setup_icon.c
Firmware/ESP32/RX5808/main/gui/lvgl_driver/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_indev.c  lvgl_init.h
Firmware/ESP32/RX5808/main/hardware/: 24cxx.c  beep.c  fan.c  fan.h  hwvers.h  lcd.c  lcd.h  nvs_rw.c  nvs_rw.h  rx5808.c  rx5808_config.c  rx5808_config.h  system.c
